I have finished to write tests for 5 of 9 scenarios. I create classes for drug list, lab list and compound list pages. Also I have added some changes in page model.

--- a/src/test/java/easytox/apptest/config/OR.properties
+++ b/src/test/java/easytox/apptest/config/OR.properties
@@ -30,3 +30,41 @@ RequiredNoofRecords=30
 #Scenario-5
 Sortingarrowhead=//*[@id='lablist']/thead/tr/th[3]
 #above xpath is sorting with Description column
+
+#--------- Security framework -> Drug library ------------------
+#Scenarios 1 and 2
+libraryIcon_xpath=/html/body/div[2]/div/div/div[3]/div/ul/li[10]/a
+compoundLibraryPage_text =  Compound Library
+createNewCompoundIcon = #add > i
+
+modalWindowForCreatingNewCompound = #addCompound > div
+inputNameOnAddCompound = #name
+inputClassOnAddCompound = #classtype
+selectTypeOnAddCompound = #type
+inputCutoffOnAddCompound = #cutoff
+inputMinRange = #min
+inputMaxRange = #max
+selectUnitOnAddCompound = #testUnit
+selectUnitOnAddVCompound = #validationUnit
+selectRangeOnAddCompound = #rangetype
+selectResultOnAddCompound = #result
+inputBillingCodeOnAddCompound = #billingCode
+inputOralDetectionOnAddCompound = #detectionOral
+inputUrineDetectionOnAddCompound = #detectionUrine
+inputNegativeCommentsOnAddCompound = #negativeComments
+inputPositiveCommentsOnAddCompound = #positiveComments
+submitCreationCompoundButton = #form > div.modal-footer > button.btn.btn-primary.btn-md
+messageCompoundWasCreated = #maincontentdiv > div.page-body > div.alert.alert-success.fade.in
+
+#Scenario 3
+drugLibraryText = Drug Library
+addDrugIcon = #add > i
+addDrugModalWindow = #addDrug > div > div
+
+#Scenario 4,5
+selectCompounds = #form > div.modal-body > div:nth-child(3) > div > span
+selectValuesCompound = #compounds
+inputDrugName = #drugName
+selectAccessionPrefix = #role
+messageAfterCreatingDrug = #maincontentdiv > div.page-body > div.alert.alert-success.fade.in
+submitFormButton = #form > div.modal-footer > button.btn.btn-primary.btn-md
