--- a/src/test/java/easytox/apptest/config/SIT_config.properties
+++ b/src/test/java/easytox/apptest/config/SIT_config.properties
@@ -1,5 +1,10 @@
 #SIT URL
 LoginURL=http://162.243.2.94:8080/easytox/
+compoundPageUrl=http://162.243.2.94:8080/easytox/compound/list
+drugListPageUrl = http://162.243.2.94:8080/easytox/drug/list
 
 Username=superadmin	
 Password=CloudEasyTox@2016
+
+lab_admin_username = Hyderabadtest
+lab_admin_password = Easytox*12
