I have finished to write tests for 8 of 10 scenarios.

--- a/src/test/java/easytox/apptest/config/OR.properties
+++ b/src/test/java/easytox/apptest/config/OR.properties
@@ -68,3 +68,26 @@ inputDrugName = #drugName
 selectAccessionPrefix = #role
 messageAfterCreatingDrug = #maincontentdiv > div.page-body > div.alert.alert-success.fade.in
 submitFormButton = #form > div.modal-footer > button.btn.btn-primary.btn-md
+
+#Scenario 6
+compoundTestGroup = Compound Test Group
+addTestCodeIcon = #add > i
+addTestCodeModalWindow = #addTestcode > div
+compounds = #compounds1 > span > span.selection > span
+compoundsAllVariants = #compounds
+inputTestCode = #test_code
+inputDescription = #description
+selectCompound = #compounds
+submitNewTestCode = #form > div.modal-footer > button.btn.btn-primary.btn-md
+messageAfterCreatingNewTestCode = #maincontentdiv > div.page-body > div.alert.alert-success.fade.in
+
+#Scenario 7
+validityTestGroupIcon = Validity Test Group
+addValidityTestCodeIcon = #add > i
+addValidityTestCodeWindow = #addTestcode > div
+selectCompoundField = #compounds1 > span > span.selection > span
+selectCompoundAtValidityTestCode = #compounds
+inputValidityTestCode = #test_code
+inputDescriptionValidityTestCode = #description
+submitValidityTestCodeButton = #form > div.modal-footer > button.btn.btn-primary.btn-md
+messageAfterCreatingNewValidityTestCode = #maincontentdiv > div.page-body > div.alert.alert-success.fade.in
