--- a/src/test/java/easytox/apptest/config/SIT_config.properties
+++ b/src/test/java/easytox/apptest/config/SIT_config.properties
@@ -1,10 +1,12 @@
 #SIT URL
 LoginURL=http://162.243.2.94:8080/easytox/
 compoundPageUrl=http://162.243.2.94:8080/easytox/compound/list
-drugListPageUrl = http://162.243.2.94:8080/easytox/drug/list
-
+drugListPageUrl=http://162.243.2.94:8080/easytox/drug/list
+compoundTestGroupPageUrl=http://162.243.2.94:8080/easytox/testCode/list
+validityTestGroupUrl=http://162.243.2.94:8080/easytox/testCode/validitylist
 Username=superadmin	
 Password=CloudEasyTox@2016
-
 lab_admin_username = Hyderabadtest
 lab_admin_password = Easytox*12
+#lab_admin_username=Lab5Admin
+#lab_admin_password=Test@1234
