I have finished to all test for drug library.

--- a/src/test/java/easytox/apptest/config/OR.properties
+++ b/src/test/java/easytox/apptest/config/OR.properties
@@ -81,7 +81,7 @@ selectCompound = #compounds
 submitNewTestCode = #form > div.modal-footer > button.btn.btn-primary.btn-md
 messageAfterCreatingNewTestCode = #maincontentdiv > div.page-body > div.alert.alert-success.fade.in
 
-#Scenario 7
+#Scenario 7 and 8
 validityTestGroupIcon = Validity Test Group
 addValidityTestCodeIcon = #add > i
 addValidityTestCodeWindow = #addTestcode > div
@@ -91,3 +91,22 @@ inputValidityTestCode = #test_code
 inputDescriptionValidityTestCode = #description
 submitValidityTestCodeButton = #form > div.modal-footer > button.btn.btn-primary.btn-md
 messageAfterCreatingNewValidityTestCode = #maincontentdiv > div.page-body > div.alert.alert-success.fade.in
+
+#Scenario 9
+testingProfileIcon = Testing Profile
+addTestingProfileButton = #add > i
+addProfileWindow = #addProfile > div
+profileName = #profileName
+
+testScreenGroupButton = #form > div.modal-body > div:nth-child(2) > div > div > button
+testScreenGroupSearch = #form > div.modal-body > div:nth-child(2) > div > div > ul > li.multiselect-item.filter > div > input
+testScreenGroupClearSearch = #form > div.modal-body > div:nth-child(2) > div > div > ul > li.multiselect-item.filter > div > span.input-group-btn > button
+testScreenGroupResultSearch = #form > div.modal-body > div:nth-child(2) > div > div > ul > li:nth-child(3) > a > label
+
+validityTestGroupButton = #form > div.modal-body > div:nth-child(3) > div > div > button
+validityTestGroupSearch = #form > div.modal-body > div:nth-child(3) > div > div > ul > li.multiselect-item.filter > div > input
+validityTestGroupClearSearch = #form > div.modal-body > div:nth-child(3) > div > div > ul > li.multiselect-item.filter > div > span.input-group-btn > button
+validityTestGroupResultSearch = #form > div.modal-body > div:nth-child(3) > div > div > ul > li:nth-child(3) > a > label
+submitCreationOfNewTestingProfile = #form > div.modal-footer > button.btn.btn-primary.btn-md
+
+messageAfterCreatingTestingProfile = #maincontentdiv > div.page-body > div.alert.alert-success.fade.in
