I continue to implement tests for audit and user log.

--- a/src/test/java/easytox/apptest/config/OR.properties
+++ b/src/test/java/easytox/apptest/config/OR.properties
@@ -112,7 +112,7 @@ submitCreationOfNewTestingProfile = #form > div.modal-footer > button.btn.btn-pr
 messageAfterCreatingTestingProfile = #maincontentdiv > div.page-body > div.alert.alert-success.fade.in
 
 #--------- Security framework -> Audit and user log ------------------
-#Scenarios 1
+#Scenario 1
 addLabModalWindow = #addLab > div
 closeAddLabModalWindow = #addLabdiv > div > button
 inputLabName = #lab_name
@@ -132,10 +132,11 @@ sortTableByName = //*[@id="lablist"]/thead/tr/th[2]
 selectAmountOfRecordsInTable = #lablist_length > label > select
 noMatchingRecordsMessage = #lablist > tbody > tr > td
 
-#Scenarion 2
+#Scenario 2
 addLabUserIcon = #maincontentdiv > div.page-body > div > div.col-xs-12.col-md-12 > div > div.widget-header > div > div:nth-child(4) > form > a > i
 
 inputUsername = #form > div:nth-child(3) > span > input
+
 inputPassword = #form > div:nth-child(4) > span > input
 inputFirstName = #form > div:nth-child(6) > div:nth-child(1) > div > span > input
 inputLastName = #form > div:nth-child(6) > div:nth-child(2) > div > span > input
@@ -147,11 +148,33 @@ submitAdd = #form > button.btn.btn-primary
 
 messageAfterAddingLab = #maincontentdiv > div.page-body > div.alert.alert-success.fade.in
 
-#Scenarion 3
+#Scenario 3
 settingIcon = /html/body/div[2]/div/div/div[3]/div/ul/li[9]/a
 addLabUser = #example_wrapper > div.toolbar > a:nth-child(1) > i
 selectRoleForLabUser = #form > div:nth-child(9) > select
 
-#Scenarion 4
+#Scenario 4
 
-#Scenarion 5
+#Scenario 5
+addPhysicianIcon = //*[@id="example_wrapper"]/div[2]/a/i
+checkboxPortalAccess = #form > div.form-group > div > label > span
+inputUsernameForPhysician = #userinfo > div.row > div:nth-child(1) > div > span > input
+inputPasswordForPhysician = #userinfo > div.row > div:nth-child(2) > div > span > input
+inputFirstNameForPhysician = #form > div:nth-child(6) > div:nth-child(1) > div > span > input
+inputMiddleNameForPhysician = #form > div:nth-child(6) > div:nth-child(2) > div > span > input
+inputLastNameForPhysician = #form > div:nth-child(6) > div:nth-child(3) > div > span > input
+inputMedicalDegreeForPhysician = #form > div:nth-child(6) > div:nth-child(4) > div > input
+inputPhoneForPhysician = #form > div:nth-child(7) > div:nth-child(1) > div > span > input
+inputEmailForPhysician = #form > div:nth-child(7) > div:nth-child(2) > div > span > input
+selectLabClientForPhysician = #labclientselect
+selectLocationForPhysician = #lablocations
+buttonSubmitPhysician = #reportTemplate > button
+
+#Scenario 6
+selectLabClient = #labClient
+selectUser = #user
+titleOfAuditLogTable = #example > thead > 
+titleOfModifiedByColumn = #example > thead > tr > th:nth-child(1)
+allRawWithDataInAuditLogTable = #example > tbody > tr:nth-child(1)
+selectAmountOfRawPerOnePage = #example_length > label > select
+
