--- a/src/test/java/easytox/apptest/config/SIT_config.properties
+++ b/src/test/java/easytox/apptest/config/SIT_config.properties
@@ -13,6 +13,8 @@ labPaymentUrl = http://162.243.2.94:8080/easytox/lab/payment
 labUsersListPageUrl = http://162.243.2.94:8080/easytox/user/index
 addLabUsersPageUrl = http://162.243.2.94:8080/easytox/user/create
 physicianPageUrl = http://162.243.2.94:8080/easytox/clinician/clinicianlist
+addPhysicianPageUrl = http://162.243.2.94:8080/easytox/clinician/create
+auditLogUrl = http://162.243.2.94:8080/easytox/auditLog/list
 
 #Users
 Username=superadmin	
