I continue to implement tests for audit and user log.

--- a/src/test/java/easytox/apptest/config/OR.properties
+++ b/src/test/java/easytox/apptest/config/OR.properties
@@ -173,8 +173,16 @@ buttonSubmitPhysician = #reportTemplate > button
 #Scenario 6
 selectLabClient = #labClient
 selectUser = #user
-titleOfAuditLogTable = #example > thead > 
+inputCaseNumber = #caseNo
+inputDateFrom = #example_range_from_2
+inputDateTo = #example_range_to_2
+inputTableName = #table
+selectEventType = #eventType
+titleOfAuditLogTable = #example > thead > tr
 titleOfModifiedByColumn = #example > thead > tr > th:nth-child(1)
-allRawWithDataInAuditLogTable = #example > tbody > tr:nth-child(1)
+allRowsWithDataInAuditLogTable = #example > tbody > tr
 selectAmountOfRawPerOnePage = #example_length > label > select
+
+#Scenario 7
+auditLogSearchButton = #search
 
