I continue to implement tests for audit and user log.

--- a/src/test/java/easytox/apptest/config/OR.properties
+++ b/src/test/java/easytox/apptest/config/OR.properties
@@ -186,3 +186,6 @@ selectAmountOfRawPerOnePage = #example_length > label > select
 #Scenario 7
 auditLogSearchButton = #search
 
+#Scenario 8
+oneOfHeadOfColumn = #example > thead > tr  > th
+firstRow = #example > tbody > tr
