I continue to implement tests for audit and user log.

--- a/src/test/java/easytox/apptest/config/OR.properties
+++ b/src/test/java/easytox/apptest/config/OR.properties
@@ -189,3 +189,17 @@ auditLogSearchButton = #search
 #Scenario 8
 oneOfHeadOfColumn = #example > thead > tr  > th
 firstRow = #example > tbody > tr
+
+#Scenaroio 9
+paginationPrevButton = #example_paginate > ul > li.prev > a
+paginationNextButton  = #example_paginate > ul > li.next > a
+paginationFirstPageButton = #example_paginate > ul > li:nth-child(2) > a
+paginationSecondPageButton = #example_paginate > ul > li:nth-child(3) > a
+paginationThirdPageButton = #example_paginate > ul > li:nth-child(4) > a
+paginationPageIsActiveButton = #example_paginate > ul > li.active > a
+
+dataTablesInfo = #example_info
+titleOfUsernameColumn = #example > thead > tr > th:nth-child(1)
+titleOfVisitedURL = #example > thead > tr > th:nth-child(3)
+titleOfDateTimeColumn = #example > thead > tr > th:nth-child(4)
+titleOfCaseAccColumn = #example > thead > tr > th:nth-child(5)
