--- a/src/test/java/easytox/apptest/config/SIT_config.properties
+++ b/src/test/java/easytox/apptest/config/SIT_config.properties
@@ -15,11 +15,12 @@ addLabUsersPageUrl = http://162.243.2.94:8080/easytox/user/create
 physicianPageUrl = http://162.243.2.94:8080/easytox/clinician/clinicianlist
 addPhysicianPageUrl = http://162.243.2.94:8080/easytox/clinician/create
 auditLogUrl = http://162.243.2.94:8080/easytox/auditLog/list
+userLogUrl = http://162.243.2.94:8080/easytox/userLog/list
 
 #Users
 Username=superadmin	
 Password=CloudEasyTox@2016
 newLabAdminUsername = Snlabadmin
 newLabAdminPassword = Test@123
-lab_admin_username=Lab6Admin
-lab_admin_password=Test@1234
+lab_admin_username=Niagaratest
+lab_admin_password=Easytox*12
